todas las carpetas en repo1

--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -67,7 +67,31 @@
 </header>
 <!-- termina header -->
 
+<main>
 
+  <h1 class="text-center my-3">Biografía</h1>
+  <p class="text-center main__texto--m mx-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, hic inventore aspernatur quos ratione nihil molestiae rerum voluptatem minus dolor veritatis iusto animi error suscipit repudiandae est aperiam quisquam consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vitae ipsam nihil necessitatibus libero. Culpa eveniet, ipsam incidunt modi, aliquid, reiciendis velit itaque qui totam quaerat cum dolorum quasi at.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, hic inventore aspernatur quos ratione nihil molestiae rerum voluptatem minus dolor veritatis iusto animi error suscipit repudiandae est aperiam quisquam consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vitae ipsam nihil necessitatibus libero. Culpa eveniet, ipsam incidunt modi, aliquid, reiciendis velit itaque qui totam quaerat cum dolorum quasi at.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, hic inventore aspernatur quos ratione nihil molestiae rerum voluptatem minus dolor veritatis iusto animi error suscipit repudiandae est aperiam quisquam consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vitae ipsam nihil necessitatibus libero. Culpa eveniet, ipsam incidunt modi, aliquid, reiciendis velit itaque qui totam quaerat cum dolorum quasi at.</p>
+  
+  <!-- comienza sistema de grid BS -->
+
+  <div class="container text-center">
+    <section class="row d-flex justify-content-center">
+    <div class="row row-cols-2">
+      <div class="col col-sm-12 col-lg-6">
+        <video src="../img/fotos/Video 2 (1).MP4" controls autoplay muted width="100%" >
+
+        </video>   </div>
+      <div class="col col-sm-12 col-lg-6">
+        <video src="../img/fotos/Video 1 (1).mov" controls width="100%"></video>
+      </div>
+      
+    </div>
+  </div>
+</section>
+  <!-- termina sistema de grid BS -->
+
+  
+   </main>
 
 <!-- comienza footer -->
 <footer>
