--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,7 +71,7 @@
 <header class="encabezado">
 
 </header>
-
+<!-- termina header -->
 <main>
   <h1 class="text__center">Contacto</h1>
       <main>
