--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -66,7 +66,33 @@
 
 </header>
 <!-- termina header -->
+<!--comienza main  -->
+<main>
 
+  <h1 class="text-center my-5">Indumentaria MST</h1>
+<section class="row d-flex justify-content-center">
+<div class="card col-sm-12 col-lg-6 text-center mx-5" style="width: 18rem;">
+  <img src="../img/fotos/remera1.webp" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Añadir al carrito</a>
+  </div>
+</div>
+
+<div class="card col-sm-12 col-lg-6 text-center mx-5" style="width: 18rem;">
+  <img src="../img/fotos/remera2.webp" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Añadir al carrito</a>
+  </div>
+</div>
+</section>
+</main>
+
+
+<!--termina main  -->
 
 
 
