--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 
     <!-- comienza botonera -->
-    <nav class="navbar navbar-expand-lg bg-blue" id="botonera">
+    <div class="sticky-top">
+    <nav class="navbar navbar-expand-lg botonera__bg" id="botonera">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img src="./img/iconos/logo-svg.svg" alt="Logo Spider en negro" class="nav-img">
@@ -62,52 +63,59 @@
           </div>
         </div>
       </nav>
-
+</div>
   
  <!-- termina botonera -->
+
 <!-- comienza header -->
 <header class="encabezado">
 
 </header>
 <!-- termina header -->
+
 <!-- Comienza sistema de grillas de BS -->
- <main>
-<section class="my-3 container-fluid">
-  <div class="container text-center">
-    <div class="row">
-      <div class="col">
-        <img src="./img/fotos/rectodefondo.jpg" alt="Mauricio Spider Tazzioli dando un recto de fondo" class="wow animate__fadeInLeft">
-      </div>
-      <div class="col wow animate__fadeInUp">
-        <section class="text-center">
-          <h2>Carrera profesional</h2>
-          <ul class="texto-claro text-center">
-          <li>135 libras / 61kg</li>
-          <li>Campeón Provincial</li>
-          <li>Campeón Regional CFC</li>
-          <li>Campeón Nacional OAMA</li>
-          <li>Cinturón negro Kick Boxing </li>
-          <li>Campeón ranking ACK BOX</li>
-          </ul>
-      </section>
-      </div>
-      <div class="col">
-        <img src="./img/fotos/entrandoalring.jpg" alt="Mauricio Spider Tazzioli entrando al ring" class="wow animate__fadeInRight">
-      </div>
+<main>
+
+<section class="bg-gray my-3 py-5">
+  <h1 class="text-center wow animate__animated animate__backInDown">LOGROS DEPORTIVOS</h1>
+ <div class="container text-center">
+  <div class="row">
+    <div class="col wow animate__animated animate__backInDown py-3">
+      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="">
+      <p>CAMPEÓN PROVINCIAL</p>
+      <p> 1° puesto talla alta | Campeón absoluto overall.</p>
+    </div>
+    <div class="col wow animate__animated animate__backInDown py-3">
+      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="">
+      <p>CAMPEÓN REGIONAL CFC</p>
+      <p> 1° puesto talla alta | Campeón absoluto overall.</p>
     </div>
   </div>
-
-</div>
+  <div class="row">
+    <div class="col wow animate__animated animate__backInDown">
+      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="">
+      <p>CAMPEÓN NACIONAL OAMA</p>
+      <p> 1° puesto talla alta | Campeón absoluto overall.</p>
+    </div>
+    <div class="col wow animate__animated animate__backInDown">
+      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="">
+      <p>CINTURÓN NEGRO KICK BOXING</p>
+      <P>1° puesto talla alta | Campeón absoluto overall.</P>
+    </div>
+    <div class="col wow animate__animated animate__backInDown">
+      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="">
+      <p>CAMPEÓN RANKING ACK BOX</p>
+      <p> 1° puesto talla alta | Campeón absoluto overall.</p>
+    </div>
+  </div>
 </div>
 </section>
-
-
- </main>
+</main>
 
 
 <!-- Termina sistema de grillas de BS -->
 
-<p class="text-center texto-claro wow animate__fadeInLeft">
+<p class="text-center mx-5 texto-claro wow animate__fadeInLeft">
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quod officiis quibusdam eius unde vitae sed debitis voluptas, explicabo nulla, nihil itaque distinctio? Nesciunt corrupti obcaecati inventore incidunt nam vel?
 </p>
 
@@ -119,9 +127,9 @@
 
 <!-- comienza footer -->
 <footer>
-  <div class="container">
-    <nav class="navbar navbar-expand-lg flex justify-content botonera__lista aligne-items">
-      <div class="container-fluid">
+
+    <nav class="mx-3 flex justify-content botonera__lista aligne-items">
+  
       
   <a href="index.html">
       <img src="./img/iconos/logo-svg.svg" alt="logo de spider tazzioli" class="nav-img">
@@ -141,10 +149,7 @@
   <img src="./img/iconos/insta.png" alt="seguinos en Instagram">
   
       </a>
-
-</div>
-    </nav>
-  </div>
+</nav>
   </footer>
   <!-- termina footer -->
 
