--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -70,7 +70,7 @@
   
  <!-- termina botonera -->
 <!-- comienza header -->
-<header class="encabezado">
+<header class="header__contacto">
 
 </header>
 <!-- termina header -->
