--- a/pages/entrenamientos.html
+++ b/pages/entrenamientos.html
@@ -70,7 +70,7 @@
   
  <!-- termina botonera -->
 <!-- comienza header -->
-<header class="encabezado">
+<header class="header__entrenamientos">
 
 </header>
 <!-- termina header -->
