--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -21,10 +21,10 @@
           <a class="navbar-brand" href="../index.html">
             <img src="../img/iconos/logo-svg.svg" alt="Logo Spider en negro" class="nav-img">
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <button class="navbar-toggler " type="button " data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown " aria-controls="navbarNavDropdown " aria-expanded="false " aria-label="Toggle navigation ">
+            <span class="navbar-toggler-icon "></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <div class="collapse navbar-collapse bg-gray " id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
@@ -63,7 +63,7 @@
   
  <!-- termina botonera -->
 <!-- comienza header -->
-<header class="encabezado">
+<header class="header__indumentaria">
 
 </header>
 <!-- termina header -->
@@ -72,7 +72,7 @@
 
   <h1 class="text-center my-5">Indumentaria MST</h1>
 <section class="row d-flex justify-content-center">
-<div class="card col-sm-12 col-lg-6 text-center mx-5" style="width: 18rem;">
+<div class="card col-sm-12 col-lg-6 text-center mx-5 my-3" style="width: 18rem;">
   <img src="../img/fotos/remera1.webp" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -81,7 +81,7 @@
   </div>
 </div>
 
-<div class="card col-sm-12 col-lg-6 text-center mx-5" style="width: 18rem;">
+<div class="card col-sm-12 col-lg-6 text-center mx-5 my-3" style="width: 18rem;">
   <img src="../img/fotos/remera2.webp" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
