redistribucion de la botonera

--- a/pages/entrenamientos.html
+++ b/pages/entrenamientos.html
@@ -24,7 +24,7 @@
     <div class="sticky-top">
       <nav class="navbar navbar-expand-lg botonera__bg" id="botonera">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">
+          <a class="navbar-brand mx-4" href="../index.html">
             <img src="../img/iconos/logo-svg.svg" alt="Logo Spider en negro" class="nav-img">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,28 +32,28 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
+              <li class="nav-item mx-5">
                 <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-5">
                 <a class="nav-link" href="./biografia.html">Biografía
                 </a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-5">
                 <a class="nav-link" href="./entrenamientos.html">Entrenamientos
                 </a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-5">
                 <a class="nav-link" href="./indumentaria.html">Indumentaria
                 </a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-5">
                 <a class="nav-link" href="./contacto.html">Contacto
                 </a>
-                <li class="nav-item">
+                <li class="nav-item mx-5">
                   <a class="nav-link" href="#">
                  
-                <button type="button" class="btn btn-outline-dark">
+                <button type="button" class="btn btn-outline-dark mx-4">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
                     <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
                   </svg>
@@ -65,7 +65,8 @@
           </div>
         </div>
       </nav>
-      </div>
+    </div>
+
 
   
  <!-- termina botonera -->
