--- a/index.html
+++ b/index.html
@@ -18,54 +18,67 @@
 <link rel="stylesheet" href="css/animate.css">
 
 
-    <!-- comienza botonera -->
-    <div class="sticky-top">
-    <nav class="navbar navbar-expand-lg botonera__bg" id="botonera">
-        <div class="container-fluid">
-          <a class="navbar-brand mx-4" href="index.html">
-            <img src="./img/iconos/logo-svg.svg" alt="Logo Spider en negro" class="nav-img">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item mx-5">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-              </li>
-              <li class="nav-item mx-5">
-                <a class="nav-link" href="pages/biografia.html">Biografía
-                </a>
-              </li>
-              <li class="nav-item mx-5">
-                <a class="nav-link" href="pages/entrenamientos.html">Entrenamientos
-                </a>
-              </li>
-              <li class="nav-item mx-5">
-                <a class="nav-link" href="pages/indumentaria.html">Indumentaria
-                </a>
-              </li>
-              <li class="nav-item mx-5">
-                <a class="nav-link" href="pages/contacto.html">Contacto
-                </a>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                 
-                <button type="button" class="btn btn-outline-dark mx-4">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
-                    <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-                  </svg>
-              </button>
-                 </a>
+ <!-- comienza botonera I -->
+ <nav class="navbar bg-dark botoneraI py-0">
+  <div class="container">
+    <a class="navbar-brand py-0" href="https://instagram.com/spider.tazzioli?igshid=MTg0ZDhmNDA=" target="_blank">
+      <img src="./img/iconos/insta.png" alt="Instagram" width="30" height="30">
+    </a>
+  </div>
+</nav>
 
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+<!-- termina botonera I -->
+
+<!-- comienza botonera II -->
+<div class="sticky-top">
+  <nav class="navbar navbar-expand-lg botonera__bg" id="botonera">
+    <div class="container-fluid">
+      <a class="navbar-brand mx-4" href="./index.html">
+        <img src="./img/iconos/logo-svg.svg" alt="Logo Spider en negro" class="nav-img">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item mx-4">
+            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+          </li>
+          <li class="nav-item mx-4">
+            <a class="nav-link" href="./pages/biografia.html">Biografía
+            </a>
+          </li>
+          <li class="nav-item mx-4">
+            <a class="nav-link" href="./pages/entrenamientos.html">Entrenamientos
+            </a>
+          </li>
+          <li class="nav-item mx-4">
+            <a class="nav-link" href="./pages/indumentaria.html">Indumentaria
+            </a>
+          </li>
+          <li class="nav-item mx-4">
+            <a class="nav-link" href="./pages/contacto.html">Contacto
+            </a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+             
+            <button type="button" class="btn btn-outline-dark mx-4">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
+                <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+              </svg>
+          </button>
+             </a>
+
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </div>
-  
- <!-- termina botonera -->
+
+
+
+<!-- termina botonera -->
 
 <!-- comienza header -->
 <header class="encabezado">
