--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -12,9 +12,20 @@
 <!-- CSS -->
 <link rel="stylesheet" href="../css/style.css">
 
-  <body>
 
-    <!-- comienza botonera -->
+
+    <!-- comienza botonera I -->
+    <nav class="navbar bg-dark botoneraI py-0">
+      <div class="container">
+        <a class="navbar-brand py-0" href="https://instagram.com/spider.tazzioli?igshid=MTg0ZDhmNDA=" target="_blank">
+          <img src="../img/iconos/insta.png" alt="Instagram" width="30" height="30">
+        </a>
+      </div>
+    </nav>
+
+    <!-- termina botonera I -->
+
+    <!-- comienza botonera II -->
     <div class="sticky-top">
       <nav class="navbar navbar-expand-lg botonera__bg" id="botonera">
         <div class="container-fluid">
@@ -26,25 +37,25 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item mx-5">
+              <li class="nav-item mx-4">
                 <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
               </li>
-              <li class="nav-item mx-5">
+              <li class="nav-item mx-4">
                 <a class="nav-link" href="./biografia.html">Biografía
                 </a>
               </li>
-              <li class="nav-item mx-5">
+              <li class="nav-item mx-4">
                 <a class="nav-link" href="./entrenamientos.html">Entrenamientos
                 </a>
               </li>
-              <li class="nav-item mx-5">
+              <li class="nav-item mx-4">
                 <a class="nav-link" href="./indumentaria.html">Indumentaria
                 </a>
               </li>
-              <li class="nav-item mx-5">
+              <li class="nav-item mx-4">
                 <a class="nav-link" href="./contacto.html">Contacto
                 </a>
-                <li class="nav-item mx-5">
+                <li class="nav-item">
                   <a class="nav-link" href="#">
                  
                 <button type="button" class="btn btn-outline-dark mx-4">
