botoneras pipiri nais

--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -15,10 +15,10 @@
 
 
   <!-- comienza botonera I -->
-  <nav class="navbar bg-dark botoneraI py-0">
+  <nav class="navbar botoneraI py-0 bg-gray">
     <div class="container">
       <a class="navbar-brand py-0" href="https://instagram.com/spider.tazzioli?igshid=MTg0ZDhmNDA=" target="_blank">
-        <img src="../img/iconos/insta.png" alt="Instagram" width="30" height="30">
+        <img src="../img/iconos/instagram.png" alt="Instagram" width="30" height="30" class="botoneraI-img">
       </a>
     </div>
   </nav>
