--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 
  <!-- comienza botonera I -->
- <nav class="navbar bg-dark botoneraI py-0">
+ <nav class="navbar botoneraI py-0 bg-gray">
   <div class="container">
     <a class="navbar-brand py-0" href="https://instagram.com/spider.tazzioli?igshid=MTg0ZDhmNDA=" target="_blank">
-      <img src="./img/iconos/insta.png" alt="Instagram" width="30" height="30">
+      <img src="./img/iconos/instagram.png" alt="Instagram" width="30" height="30" class="botoneraI-img">
     </a>
   </div>
 </nav>
@@ -89,8 +89,9 @@
 <!-- Comienza sistema de grillas de BS -->
 <main>
 
-<section class="bg-gray my-3 py-5">
-  <h1 class="text-center wow animate__animated animate__backInDown">LOGROS DEPORTIVOS</h1>
+<section class="bg-gray py-5">
+  <h1 class="text-center wow animate__animated animate__backInDown">MAURICIO "SPIDER" TAZZIOLI</h1>
+  <h2 class="text-center wow animate__animated animate__backInDown">LOGROS DEPORTIVOS</h2>
  <div class="container text-center">
   <div class="row">
     <div class="col wow animate__animated animate__backInDown py-3">
