--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pagina oficial Mauricio Spider Tazzioli</title>
+    <title>Contacto Mauricio Spider Tazzioli</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/iconos/logo-svg.svg" type="logo spider Tazzioli negro">
     <link
