--- a/pages/entrenamientos.html
+++ b/pages/entrenamientos.html
@@ -114,7 +114,7 @@
 
 
 <div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/rutina.png" class="card-img-top card-img img-center" alt="icono de rutina">
+    <img src="../img/iconos/rutina.png" class="card-img-top card-img img-center" alt="icono">
     <div class="card-body">
       <h3 class="card-title">RUTINA DE ENTRENAMIENTO
     </h3>
@@ -122,25 +122,25 @@
     </div>
   </div>
   <div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/nutricion.png" class="card-img-top card-img img-center" alt="icono de rutina">
+    <img src="../img/iconos/nutricion.png" class="card-img-top card-img img-center" alt="icono">
     <div class="card-body">
       <h3 class="card-title">PLAN NUTRICIONAL</h3>
       <p class="card-text">Adaptado según tus datos antropométricos, horarios, estilo de vida, objetivos a lograr y gustos. El plan incluye opciones para que armes una alimentación variada y  a tu gusto.</p>
     </div>
   </div><div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/libro-de-recetas.png" class="card-img-top card-img img-center" alt="icono de rutina">
+    <img src="../img/iconos/libro-de-recetas.png" class="card-img-top card-img img-center" alt="icono">
     <div class="card-body">
       <h3 class="card-title">RECETARIO</h3>
       <p class="card-text">Los planes de 3 y 6 meses incluyen el acceso a un recetario variado, con cantidades específicas a consumir, para un mejor control sobre tu alimentación.</p>
     </div>
   </div><div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/guia.png" class="card-img-top card-img img-center" alt="icono de rutina">
+    <img src="../img/iconos/guia.png" class="card-img-top card-img img-center" alt="icono">
     <div class="card-body">
       <h3 class="card-title">GUÍA DE EJERCICIOS</h3>
       <p class="card-text">Tendrás acceso a una guía gráfica con diferentes ejercicios de entrenamiento y estiramiento, para comprender la realización de los ejercicios detallados en el plan.</p>
     </div>
   </div><div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/tips.png" class="card-img-top card-img img-center" alt="icono de rutina">
+    <img src="../img/iconos/tips.png" class="card-img-top card-img img-center" alt="icono">
     <div class="card-body">
       <h3 class="card-title">GUÍA DE TIPS
     </h3>
@@ -149,7 +149,7 @@
     </div>
   </div>
   <div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/seguimiento.png" class="card-img-top card-img img-center" alt="icono de rutina">
+    <img src="../img/iconos/seguimiento.png" class="card-img-top card-img img-center" alt="icono">
     <div class="card-body">
       <h3 class="card-title">SEGUIMIENTO</h3>
       <p class="card-text">Accederás a una línea de Whatsapp para evacuar tus dudas. Además, deberás completar una ficha de seguimiento mes a mes para evaluar tu evolución.</p>
