se agrego vars y scss

--- a/index.html
+++ b/index.html
@@ -95,29 +95,29 @@
  <div class="container text-center">
   <div class="row">
     <div class="col wow animate__animated animate__backInDown py-3">
-      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="">
+      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="icono de medalla">
       <p>CAMPEÓN PROVINCIAL</p>
       <p> 1° puesto talla alta | Campeón absoluto overall.</p>
     </div>
     <div class="col wow animate__animated animate__backInDown py-3">
-      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="">
+      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="icono de medalla">
       <p>CAMPEÓN REGIONAL CFC</p>
       <p> 1° puesto talla alta | Campeón absoluto overall.</p>
     </div>
   </div>
   <div class="row">
     <div class="col wow animate__animated animate__backInDown">
-      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="">
+      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="icono de medalla">
       <p>CAMPEÓN NACIONAL OAMA</p>
       <p> 1° puesto talla alta | Campeón absoluto overall.</p>
     </div>
     <div class="col wow animate__animated animate__backInDown">
-      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="">
+      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="icono de medalla">
       <p>CINTURÓN NEGRO KICK BOXING</p>
       <P>1° puesto talla alta | Campeón absoluto overall.</P>
     </div>
     <div class="col wow animate__animated animate__backInDown">
-      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="">
+      <img src="./img/iconos/medal-with-a-star-hanging-of-a-ribbon.png" alt="icono de medalla">
       <p>CAMPEÓN RANKING ACK BOX</p>
       <p> 1° puesto talla alta | Campeón absoluto overall.</p>
     </div>
