--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pagina oficial Mauricio Spider Tazzioli, peleador profesional de Kick boxing y profesor UNC</title>
+    <title>Pagina oficial Mauricio Spider Tazzioli</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="./img/iconos/logo-svg.svg" type="logo spider Tazzioli negro">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <meta name="description" content="Web oficial Mauricio Spider Tazzioli, peleador profesional de Kick boxing y profesor UNC">
+  <meta name="keywords"  content="Kick boxing, profesor UNC, Planes personalizados, Boxeo, funcional, entrenamiento">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <!-- CSS -->
 <link rel="stylesheet" href="css/style.css">
+<!-- link CSS animaciones -->
 <link rel="stylesheet" href="css/animate.css">
 
 
@@ -129,10 +132,18 @@
 
 <!-- Termina sistema de grillas de BS -->
 
-<p class="text-center mx-5 texto-claro wow animate__fadeInLeft">
+<p class="text-center p-center mx-5 texto-claro wow animate__fadeInLeft">
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quod officiis quibusdam eius unde vitae sed debitis voluptas, explicabo nulla, nihil itaque distinctio? Nesciunt corrupti obcaecati inventore incidunt nam vel?
 </p>
 
+<div class="imgFondo mb-3">
+
+  <h4 class="py-5 px-5">"</h4>
+  <p class="textoXl ps-5 pb-5"> El cuidado del cuerpo es un camino absolutamente complaciente y sano. Va más allá de una cuestión meramente estética: requiere un gran cambio interno. Además de levantar el autoestima, genera disciplina y proporciona energía. Uno se siente más saludable, más limpio, con más energía. De esto se trata: de un cambio de estilo de vida.
+
+    ¿Estás preparado para comenzar el tuyo?”</p>
+
+</div>
 
 <h2 class="text-center wow animate__fadeInLeft">Próximo evento</h2>
 
