--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -3,15 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Biografía Mauricio Spider Tazzioli</title>
+    <title>Biografía de Mauricio Spider Tazzioli</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/iconos/logo-svg.svg" type="logo spider Tazzioli negro">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  <meta name="description" content="Biografía de Mauricio Spider Tazzioli, peleador profesional de Kick boxing y profesor UNC">
+  <meta name="keywords"  content="Kick boxing, profesor UNC, Planes personalizados, Boxeo, funcional, entrenamiento">
+
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-<!-- CSS -->
+<!-- mi CSS -->
 <link rel="stylesheet" href="../css/style.css">
-
+<!-- link CSS animaciones -->
+<link rel="stylesheet" href="../css/animate.css">
 
 
     <!-- comienza botonera I -->
@@ -83,13 +91,13 @@
 
 <main>
 
-  <h1 class="text-center my-3">Biografía</h1>
-  <p class="text-center main__texto--m mx-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, hic inventore aspernatur quos ratione nihil molestiae rerum voluptatem minus dolor veritatis iusto animi error suscipit repudiandae est aperiam quisquam consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vitae ipsam nihil necessitatibus libero. Culpa eveniet, ipsam incidunt modi, aliquid, reiciendis velit itaque qui totam quaerat cum dolorum quasi at.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, hic inventore aspernatur quos ratione nihil molestiae rerum voluptatem minus dolor veritatis iusto animi error suscipit repudiandae est aperiam quisquam consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vitae ipsam nihil necessitatibus libero. Culpa eveniet, ipsam incidunt modi, aliquid, reiciendis velit itaque qui totam quaerat cum dolorum quasi at.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, hic inventore aspernatur quos ratione nihil molestiae rerum voluptatem minus dolor veritatis iusto animi error suscipit repudiandae est aperiam quisquam consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vitae ipsam nihil necessitatibus libero. Culpa eveniet, ipsam incidunt modi, aliquid, reiciendis velit itaque qui totam quaerat cum dolorum quasi at.</p>
+  <h1 class="text-center my-3 wow animate__animated animate__backInDown">PRESENTACIÓN PERSONAL</h1>
+  <p class="text-center main__texto--m mx-5 wow animate__animated animate__backInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, hic inventore aspernatur quos ratione nihil molestiae rerum voluptatem minus dolor veritatis iusto animi error suscipit repudiandae est aperiam quisquam consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vitae ipsam nihil necessitatibus libero. Culpa eveniet, ipsam incidunt modi, aliquid, reiciendis velit itaque qui totam quaerat cum dolorum quasi at.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, hic inventore aspernatur quos ratione nihil molestiae rerum voluptatem minus dolor veritatis iusto animi error suscipit repudiandae est aperiam quisquam consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vitae ipsam nihil necessitatibus libero. Culpa eveniet, ipsam incidunt modi, aliquid, reiciendis velit itaque qui totam quaerat cum dolorum quasi at.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, hic inventore aspernatur quos ratione nihil molestiae rerum voluptatem minus dolor veritatis iusto animi error suscipit repudiandae est aperiam quisquam consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vitae ipsam nihil necessitatibus libero. Culpa eveniet, ipsam incidunt modi, aliquid, reiciendis velit itaque qui totam quaerat cum dolorum quasi at.</p>
   
   <!-- comienza sistema de grid BS -->
 
   <div class="container text-center">
-    <section class="d-flex justify-content-center">
+    <section class="d-flex justify-content-center wow animate__animated animate__backInDown">
     
       <div class="col mx-5">
         <video src="../img/fotos/Video 2 (1).MP4" controls autoplay muted width="100%" >
@@ -136,6 +144,10 @@
 </footer>
 <!-- termina footer -->
 
+<script src="../js/wow.min.js"></script>
+<script>
+new WOW().init();
+</script>
 
 </body>
 </html>
