--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contacto Mauricio Spider Tazzioli</title>
+    <title>Entrená con Mauricio Spider Tazzioli. Numero de Contacto, formulario y gimnasio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/iconos/logo-svg.svg" type="logo spider Tazzioli negro">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <meta name="description" content="Buscanos en redes o contactanos por Whatsapp">
+  <meta name="keywords"  content="Kick boxing, profesor UNC, Planes personalizados, Boxeo, funcional, entrenamiento">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -87,7 +89,7 @@
 </header>
 <!-- termina header -->
 
-  <h1 class="text__center my-3 titulo">Contacto</h1>
+  <h1 class="text__center my-3 titulo">¡EMPEZÁ HOY A CAMBIAR TU CUERPO!</h1>
   
    <div class="text__left blockI">
       <h2>Celular</h2>
