--- a/pages/entrenamientos.html
+++ b/pages/entrenamientos.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Entrená con Mauricio Spider Tazzioli</title>
+    <title>Entrená con Mauricio Spider Tazzioli. Planes personalizados de funcional, kick boxing y boxeo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/iconos/logo-svg.svg" type="logo spider Tazzioli negro">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <meta name="description" content="Planes según tu objetivo, posibilidad de pelear para obtener tu certificado oficial de kick boxing o boxeo">
+  <meta name="keywords"  content="Kick boxing, profesor UNC, Planes personalizados, Boxeo, funcional, entrenamiento">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -91,7 +93,7 @@
 <!-- comienza main -->
 <main>
     <h1 class="text-center my-3">PLANES PERSONALIZADOS DE MST</h1>
-    <h2 class="text-center mx-5">Los planes de entrenamiento y alimentación de MST tienen como misión lograr, en un corto plazo, resultados estéticos y saludables a través de un seguimiento personalizado basado en planes de entrenamiento y alimentación combinados. Los planes – disponibles tanto para hombres como para mujeres – son personalizados, a distancia, se estructuran en torno a tus objetivos y tienen una duración de 1, 3  y 6 meses.</h2>
+    <p class="text-center mx-5 main__texto--m">Los planes de entrenamiento y alimentación de MST tienen como misión lograr, en un corto plazo, resultados estéticos y saludables a través de un seguimiento personalizado basado en planes de entrenamiento y alimentación combinados. Los planes – disponibles tanto para hombres como para mujeres – son personalizados, a distancia, se estructuran en torno a tus objetivos y tienen una duración de 1, 3  y 6 meses.</p>
 
     <div class="card mx-5 my-3 text-center bg-gray wow animate__animated animate__backInDown">
         <strong>
@@ -114,7 +116,7 @@
 
 
 <div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/rutina.png" class="card-img-top card-img img-center" alt="icono">
+    <img src="../img/iconos/rutina.png" class="card-img-top card-img img-center" alt="icono de pesa">
     <div class="card-body">
       <h3 class="card-title">RUTINA DE ENTRENAMIENTO
     </h3>
@@ -122,25 +124,25 @@
     </div>
   </div>
   <div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/nutricion.png" class="card-img-top card-img img-center" alt="icono">
+    <img src="../img/iconos/nutricion.png" class="card-img-top card-img img-center" alt="icono de plan nutricional">
     <div class="card-body">
       <h3 class="card-title">PLAN NUTRICIONAL</h3>
       <p class="card-text">Adaptado según tus datos antropométricos, horarios, estilo de vida, objetivos a lograr y gustos. El plan incluye opciones para que armes una alimentación variada y  a tu gusto.</p>
     </div>
   </div><div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/libro-de-recetas.png" class="card-img-top card-img img-center" alt="icono">
+    <img src="../img/iconos/libro-de-recetas.png" class="card-img-top card-img img-center" alt="icono de recetario">
     <div class="card-body">
       <h3 class="card-title">RECETARIO</h3>
       <p class="card-text">Los planes de 3 y 6 meses incluyen el acceso a un recetario variado, con cantidades específicas a consumir, para un mejor control sobre tu alimentación.</p>
     </div>
   </div><div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/guia.png" class="card-img-top card-img img-center" alt="icono">
+    <img src="../img/iconos/guia.png" class="card-img-top card-img img-center" alt="icono de guía de ejercicios">
     <div class="card-body">
       <h3 class="card-title">GUÍA DE EJERCICIOS</h3>
       <p class="card-text">Tendrás acceso a una guía gráfica con diferentes ejercicios de entrenamiento y estiramiento, para comprender la realización de los ejercicios detallados en el plan.</p>
     </div>
   </div><div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/tips.png" class="card-img-top card-img img-center" alt="icono">
+    <img src="../img/iconos/tips.png" class="card-img-top card-img img-center" alt="icono guía de tips">
     <div class="card-body">
       <h3 class="card-title">GUÍA DE TIPS
     </h3>
@@ -149,7 +151,7 @@
     </div>
   </div>
   <div class="card col-sm-12 col-lg-3 text-center bg-gray my-2 mx-2 wow animate__animated animate__backInDown" >
-    <img src="../img/iconos/seguimiento.png" class="card-img-top card-img img-center" alt="icono">
+    <img src="../img/iconos/seguimiento.png" class="card-img-top card-img img-center" alt="icono de profesor anotando">
     <div class="card-body">
       <h3 class="card-title">SEGUIMIENTO</h3>
       <p class="card-text">Accederás a una línea de Whatsapp para evacuar tus dudas. Además, deberás completar una ficha de seguimiento mes a mes para evaluar tu evolución.</p>
