--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -6,11 +6,19 @@
     <title>Comprá nuestra indumentaria Mauricio Spider Tazzioli</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/iconos/logo-svg.svg" type="logo spider Tazzioli negro">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  <meta name="description" content="Indumentaria oficial Mauricio Spider Tazzioli, sé parte de mi equipo">
+  <meta name="keywords"  content="Kick boxing, profesor UNC, Planes personalizados, Boxeo, funcional, entrenamiento, indumentaria">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-<!-- CSS -->
+<!-- mi CSS -->
 <link rel="stylesheet" href="../css/style.css">
+<!-- link CSS animaciones -->
+<link rel="stylesheet" href="../css/animate.css">
 
 
 
@@ -83,22 +91,22 @@
 <!--comienza main  -->
 <main>
 
-  <h1 class="text-center my-5">Indumentaria MST</h1>
-<section class="row d-flex justify-content-center">
+  <h1 class="text-center my-5 wow animate__animated animate__backInDown">INDUMENTARIA MST</h1>
+<section class="row d-flex justify-content-center wow animate__animated animate__backInDown">
 <div class="card col-sm-12 col-lg-6 text-center mx-5 my-3" style="width: 18rem;">
-  <img src="../img/fotos/remera1.webp" class="card-img-top" alt="...">
+  <img src="../img/fotos/remera1.webp" class="card-img-top" alt="Remera negra con logo de araña color blanco" height="350px">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h3 class="card-title">Remera de entrenamiento</h3>
+    <p class="card-text">Remera de neopren con tecnología de respiración, absorción de humedad, mantiene el cuerpo seco. Sistema Aeroready</p>
     <a href="#" class="btn btn-primary">Añadir al carrito</a>
   </div>
 </div>
 
 <div class="card col-sm-12 col-lg-6 text-center mx-5 my-3" style="width: 18rem;">
-  <img src="../img/fotos/remera2.webp" class="card-img-top" alt="...">
+  <img src="../img/fotos/remera2.webp" class="card-img-top py-3" alt="Remera roja con logo de araña color negro" height="380px">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h3 class="card-title">Remera de equipo</h3>
+    <p class="card-text">Remera de Team Spider 80% algodón y 20% poliester para mayor comodidad y respiración para el cuerpo. Sistema HeatReady</p>
     <a href="#" class="btn btn-primary">Añadir al carrito</a>
   </div>
 </div>
@@ -137,6 +145,11 @@
 </nav>
 </footer>
 <!-- termina footer -->
+
+<script src="../js/wow.min.js"></script>
+<script>
+new WOW().init();
+</script>
 
 
 </body>
